[Mac] Fix tab dragging breakage after window controller rework.

https://chromium-review.googlesource.com/c/chromium/src/+/852978
routes all Tab- and BrowserWindowController requests through a
convenience method that queries the provided window and its
parent. This change broke code that assumed the window controller
search would not include the parent window or any other ancestors.

Bug: 805282
Change-Id: Ib2ac4817b2582836f34b7fc3755b0e324bb49c13
Reviewed-on: https://chromium-review.googlesource.com/884661
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Jayson Adams <shrike@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531745}
Former-commit-id: 75530210896c576464104e17b8dbc29851baf26d